<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <ImageView
        android:id="@+id/left_back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_keyboard_arrow_left_white"
        android:visibility="invisible"
        />

    <ImageView
        android:id="@+id/right_back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_keyboard_arrow_right_white"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/high_scores_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_h12"
        android:text="@string/high_scores_text"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        />

    <LinearLayout
        android:id="@+id/high_scores_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/guideline_h12">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/high_scores_rank_header_text"
            android:textColor="@color/score_purple"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/high_scores_name_header_text"
            android:gravity="center"
            android:textColor="@color/score_purple"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/high_scores_score_header_text"
            android:textColor="@color/score_purple"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/high_scores_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/high_scores_header"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12"
        />

</androidx.constraintlayout.widget.ConstraintLayout>