<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/home_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_v25"
        app:layout_constraintTop_toTopOf="@id/guideline_h04"
        android:text="@string/game_name"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:gravity="start"
        android:fontFamily="monospace"
        android:textAllCaps="true"
        />

    <LinearLayout
        android:id="@+id/menu_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@id/guideline_v25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_h24"
        >

        <TextView
            android:id="@+id/difficulty_selections_prompt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="@id/guideline_v25"
            app:layout_constraintTop_toTopOf="@id/guideline_h24"
            android:gravity="center_vertical|start"
            android:text="@string/difficulty_selection_prompt_text"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            />

        <TextView
            android:id="@+id/easy_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficulty_selections_prompt"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/easy_difficulty_text"
            android:textColor="@color/score_red"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            />

        <TextView
            android:id="@+id/medium_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficulty_selections_prompt"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/medium_difficulty_text"
            android:textColor="@color/score_orange"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            />

        <TextView
            android:id="@+id/hard_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficulty_selections_prompt"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/hard_difficulty_text"
            android:textColor="@color/score_yellow"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            />

        <TextView
            android:id="@+id/additional_selections_prompt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="start|center_vertical"
            android:text="@string/additional_selection_prompt_text"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            />

        <TextView
            android:id="@+id/high_scores_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="start|center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/high_scores_text"
            android:textSize="18sp"
            android:textColor="@color/score_green"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            />

    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.60"
        app:layout_constraintStart_toStartOf="@id/guideline_v25"

        app:layout_constraintTop_toBottomOf="@id/menu_options"
        android:gravity="start|center_vertical"
        android:layout_marginTop="40dp"
        android:text="@string/menu_instructions"
        android:textColor="@color/score_cyan"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="monospace"
        />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_v25"
        app:layout_constraintTop_toBottomOf="@id/guideline_h24"
        android:src="@drawable/ic_keyboard_arrow_right_white"
        />

    <ImageButton
        android:id="@+id/up_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@id/guideline_v25"
        app:layout_constraintEnd_toEndOf="@id/guideline_v25"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h85"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_arrow_upward_black"
        android:background="@drawable/round_button"
        android:scaleType="fitCenter"
        />

    <ImageButton
        android:id="@+id/down_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@id/guideline_v25"
        app:layout_constraintEnd_toEndOf="@id/guideline_v25"
        app:layout_constraintTop_toBottomOf="@id/guideline_h85"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_arrow_downward_black"
        android:background="@drawable/round_button"
        android:scaleType="fitCenter"
        />

    <ImageButton
        android:id="@+id/enter_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@id/guideline_v75"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h85"
        android:layout_marginStart="6dp"
        android:src="@drawable/ic_check_black"
        android:background="@drawable/round_button"
        android:scaleType="fitCenter"
        />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_v75"
        app:layout_constraintTop_toTopOf="@id/guideline_h85"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_back_black"
        android:background="@drawable/round_button"
        android:scaleType="fitCenter"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        />

</androidx.constraintlayout.widget.ConstraintLayout>